--- a/sass/components/_contact-info-fixed.scss
+++ b/sass/components/_contact-info-fixed.scss
@@ -3,14 +3,14 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    animation: inFromBottom .5s ease #{$splash-screen-duration + 1.8s} backwards;
+    animation: inFromBottom .5s ease #{$splash-screen-duration + 1800ms} backwards;
   }
   
   &--right {
     position: fixed;
     bottom: 0;
     right: 0;
-    animation: inFromBottom .5s ease #{$splash-screen-duration + 1.8s} backwards;
+    animation: inFromBottom .5s ease #{$splash-screen-duration + 1800ms} backwards;
   }
 
   &__box {
