--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,7 +11,7 @@
   @for $i from 1 through 5 {
     :nth-child(#{$i}n) {
       animation: fadeInFromBottom .4s ease backwards;
-      animation-delay: #{$splash-screen-duration + 1s + ($i * .1s)};
+      animation-delay: #{$splash-screen-duration + 1000ms + ($i * .1s)};
     }
   }
 
